Fix table styles on small screens

--- a/components/table/table.module.css
+++ b/components/table/table.module.css
@@ -16,17 +16,7 @@
 
 .table th,
 .table td {
-  padding: 16px 0;
-}
-
-.table th:first-child,
-.table td:first-child {
-  padding: 16px 0 16px 16px;
-}
-
-.table th:last-child,
-.table td:last-child {
-  padding: 16px 16px 16px 0;
+  padding: 16px;
 }
 
 .table > tbody > tr:not(:last-child) {
